--- a/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="80dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/teamNum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,7 +61,7 @@
         android:layout_marginTop="6dp"
         android:adjustViewBounds="true"
         android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@+id/goToMatchMetrics"
+        app:layout_constraintBottom_toTopOf="@+id/pNextContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="ContentDescription" />
@@ -72,28 +73,49 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".5" />
 
-    <org.team930.bears.wears.ButtonView
-        android:id="@+id/goToMatchMetrics"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:label="Match Metrics"
-        app:text="Next"
-        app:button_function="nav_confirm"
-        app:next_activity="AutonTeleop"
-        app:toast="Press Again to Continue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <org.team930.bears.wears.PictureView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/pNextContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        app:label="Layout"
+        android:layout_margin="2dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/rounded_corners_chunk_material"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:source="@drawable/s0" />
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <TextView
+            android:id="@+id/pNextLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:fontFamily="@font/montserratitalic"
+            android:gravity="left|center"
+            android:text="Go To Match"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
+
+        <Button
+            android:id="@+id/pGoToMatch"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:fontFamily="@font/montserratbold"
+            android:textColor="@color/colorWhite"
+            android:text="Next"
+            android:onClick="setPGoToMatch"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/pNextLabel"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
