--- a/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
@@ -28,7 +28,7 @@
     <EditText
         android:id="@+id/textboxSide"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/montserratmedium"
         android:hint="default_hint"
