--- a/Team930Scouting/WEARs/src/main/res/values/styles.xml
+++ b/Team930Scouting/WEARs/src/main/res/values/styles.xml
@@ -38,4 +38,12 @@
 
     </style>
 
+    <style name="textBoxStyle" parent="AppTheme">
+        <item name="android:fontFamily">@font/montserratmedium</item>
+
+    </style>
+    <style name="checkBoxStyle" parent="AppTheme">
+        <item name="android:fontFamily">@font/montserratregular</item>
+    </style>
+
 </resources>
