--- a/Team930Scouting/WEARs/src/main/res/layout/none_textbox_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/none_textbox_view.xml
@@ -13,7 +13,7 @@
 
 
     <EditText
-        android:id="@+id/textboxNone"
+        android:id="@+id/checkBoxOther"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserratmedium"
